Implement full device CRUD with tests. Update docker-compose, application.yml and README